--- a/DM-PersonalPortfolio/content/pages/catalog.html
+++ b/DM-PersonalPortfolio/content/pages/catalog.html
@@ -37,7 +37,7 @@
                     <a href="experience.html">Experience</a>
                     <ul class="dm-submenu">
                       <li>
-                        <a href="employ.html">Employ Experience</a>
+                        <a href="employee.html">Employee Experience</a>
                       </li>
                       <li>
                         <a href="summary-experience.html">Summary Experience</a>
@@ -387,8 +387,8 @@
             <select id="post-date-end" name="Until Date:">
                 <option value="default">date</option>
             </select>
-            <select id="post-employ" name="Employ:">
-                <option value="default">employ</option>
+            <select id="post-employ" name="Employee:">
+                <option value="default">employee</option>
             </select>
             <select id="post-web-platform" name="Web Platform">
                 <option value="default">web-platform</option>
@@ -1566,7 +1566,7 @@ The website, specializing in selling dresses for girls, is built using Prestasho
                 </div>
                 <div class="dm-footer-copyrights">
                     <span class="hide">Begining of the webiste: 04/06/2023</span>
-                    <span>Last update of webiste: 11/08/2023</span>
+                    <span>Last update of webiste: 14/08/2023</span>
                     <span>©All copyrights reserved by Denis Marginas</span>
                 </div>
             </section>
