--- a/DM-PersonalPortfolio/content/pages/employee.html
+++ b/DM-PersonalPortfolio/content/pages/employee.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Employ Experience | Denis Marginas</title><meta name="description" content="Explore my professional journey through my employ experience, where I showcase a chronological record of my employment history. Discover insights into my roles, responsibilities, and significant contributions at various companies, along with dates and key attributes."/><meta name="keywords" content="denis marginas employ"/><meta name="slug" content="employ"/><meta name="google-site-verification" content="Not set."><meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"><link rel="canonical" href="http://dm-host.go.ro/personal-portfolio/DM-PersonalPortfolio/"><link rel="profile" href="https://gmpg.org/xfn/11">
+    <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Employee Experience | Denis Marginas</title><meta name="description" content="Explore my professional journey through my employ experience, where I showcase a chronological record of my employment history. Discover insights into my roles, responsibilities, and significant contributions at various companies, along with dates and key attributes."/><meta name="keywords" content="denis marginas employee"/><meta name="slug" content="employee"/><meta name="google-site-verification" content="Not set."><meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"><link rel="canonical" href="http://dm-host.go.ro/personal-portfolio/DM-PersonalPortfolio/"><link rel="profile" href="https://gmpg.org/xfn/11">
 
     <link rel="stylesheet" href="../../themes/dm-theme/assets/css/style.css">
     <link rel="icon" type="image/x-icon" href="../../content/img/favicon/favicon.ico">
@@ -37,7 +37,7 @@
                     <a href="experience.html">Experience</a>
                     <ul class="dm-submenu">
                       <li>
-                        <a href="employ.html">Employ Experience</a>
+                        <a href="employee.html">Employee Experience</a>
                       </li>
                       <li>
                         <a href="summary-experience.html">Summary Experience</a>
@@ -769,7 +769,7 @@
                 </div>
                 <div class="dm-footer-copyrights">
                     <span class="hide">Begining of the webiste: 04/06/2023</span>
-                    <span>Last update of webiste: 11/08/2023</span>
+                    <span>Last update of webiste: 14/08/2023</span>
                     <span>©All copyrights reserved by Denis Marginas</span>
                 </div>
             </section>
