--- a/DM-PersonalPortfolio/content/pages/search.html
+++ b/DM-PersonalPortfolio/content/pages/search.html
@@ -37,7 +37,7 @@
                     <a href="experience.html">Experience</a>
                     <ul class="dm-submenu">
                       <li>
-                        <a href="employ.html">Employ Experience</a>
+                        <a href="employee.html">Employee Experience</a>
                       </li>
                       <li>
                         <a href="summary-experience.html">Summary Experience</a>
@@ -105,7 +105,7 @@
 
 <section class="dm-search-section grid-background-animation">
     <container>
-        <div class="dm-search-header">
+        <div class="dm-search-header" data-motion="transition-fade-0 transition-slideInLeft-0">
             <h1>Search</h1>
             <form id="search" class="dm-search-bar">
                 <div class="search-input">
@@ -121,7 +121,7 @@
                 </div>
             </form>
         </div>
-        <ul id="search-list" class="dm-search-list">
+        <ul id="search-list" class="dm-search-list" data-motion="transition-fade-0 transition-slideInLeft-0">
 
         </ul>
     </container>
@@ -281,7 +281,7 @@
 </li>
                                     <li>Rendered render_pages/contact.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../pages/contact.html
 </li>
-                                    <li>Rendered render_pages/employ.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../pages/employ.html
+                                    <li>Rendered render_pages/employee.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../pages/employee.html
 </li>
                                     <li>Rendered render_pages/experience.php to C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../pages/experience.html
 </li>
@@ -388,7 +388,7 @@
                 </div>
                 <div class="dm-footer-copyrights">
                     <span class="hide">Begining of the webiste: 04/06/2023</span>
-                    <span>Last update of webiste: 11/08/2023</span>
+                    <span>Last update of webiste: 14/08/2023</span>
                     <span>©All copyrights reserved by Denis Marginas</span>
                 </div>
             </section>
