--- a/DM-PersonalPortfolio/content/pages/acvaticbebeclub.html
+++ b/DM-PersonalPortfolio/content/pages/acvaticbebeclub.html
@@ -320,7 +320,7 @@ A website has been created using WordPress to provide subscriptions for teaching
 </li>
                                     <li>Deleted C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../pages/dsautocenter.html
 </li>
-                                    <li>Deleted C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../pages/employ.html
+                                    <li>Deleted C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../pages/employee.html
 </li>
                                     <li>Deleted C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../pages/experience.html
 </li>
@@ -531,7 +531,7 @@ A website has been created using WordPress to provide subscriptions for teaching
                 </div>
                 <div class="dm-footer-copyrights">
                     <span class="hide">Begining of the webiste: 04/06/2023</span>
-                    <span>Last update of webiste: 14/08/2023</span>
+                    <span>Last update of webiste: 17/08/2023</span>
                     <span>©All copyrights reserved by Denis Marginas</span>
                 </div>
             </section>
