--- a/DM-PersonalPortfolio/content/pages/amorino.html
+++ b/DM-PersonalPortfolio/content/pages/amorino.html
@@ -388,7 +388,7 @@ The website, specializing in selling dresses for girls, is built using Prestasho
 </li>
                                     <li>Deleted C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../pages/dsautocenter.html
 </li>
-                                    <li>Deleted C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../pages/employ.html
+                                    <li>Deleted C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../pages/employee.html
 </li>
                                     <li>Deleted C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../pages/experience.html
 </li>
@@ -607,7 +607,7 @@ The website, specializing in selling dresses for girls, is built using Prestasho
                 </div>
                 <div class="dm-footer-copyrights">
                     <span class="hide">Begining of the webiste: 04/06/2023</span>
-                    <span>Last update of webiste: 14/08/2023</span>
+                    <span>Last update of webiste: 17/08/2023</span>
                     <span>©All copyrights reserved by Denis Marginas</span>
                 </div>
             </section>
