--- a/DM-PersonalPortfolio/content/pages/brbhome.html
+++ b/DM-PersonalPortfolio/content/pages/brbhome.html
@@ -342,7 +342,7 @@
 </li>
                                     <li>Deleted C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../pages/dsautocenter.html
 </li>
-                                    <li>Deleted C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../pages/employ.html
+                                    <li>Deleted C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../pages/employee.html
 </li>
                                     <li>Deleted C:\xampp-php8.1\htdocs\personal-portfolio\DM-PersonalPortfolio\content\render/../pages/experience.html
 </li>
@@ -569,7 +569,7 @@
                 </div>
                 <div class="dm-footer-copyrights">
                     <span class="hide">Begining of the webiste: 04/06/2023</span>
-                    <span>Last update of webiste: 14/08/2023</span>
+                    <span>Last update of webiste: 17/08/2023</span>
                     <span>©All copyrights reserved by Denis Marginas</span>
                 </div>
             </section>
