--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
                     <head>
                       <title>Redirecting...</title>
                       <script>
-                        window.location.href = "home.html";
+                        window.location.href = "home";
                       </script>
                     </head>
                     <body>
                       <h1>Redirecting...</h1>
-                      <p>If you are not redirected, <a href="home.html">click here</a>.</p>
+                      <p>If you are not redirected, <a href="home">click here</a>.</p>
                     </body>
                     </html>
