Disable Reddirecting anf duplicate Home page with the Index page

--- a/search.html
+++ b/search.html
@@ -257,10 +257,10 @@
                     <div class="search-item-data">
 
                         <a class="title" href="index.html">
-                            Redirecting...                        </a>
+                            Portfolio                        </a>
 
                         <p class="description">
-                                                    </p>
+                            My name is Denis Ionut Marginas, I'm 25-year-old, and I've been working as a full-stack web developer and photo-video editor since 2019. Before entering the web development field, I worked as a freelance video editor, specializing in editing videos for video games.                        </p>
                     </div>
                 </li>
                             <li data-motion="transition-fade-0 transition-slideInLeft-0" data-duration="0.4s" class="search-item">
