Fixing animation ocean on categories section

--- a/experience.html
+++ b/experience.html
@@ -535,15 +535,11 @@
         </div>
     </container>
 
-    <!-- Ocean Animation Start -->
-    <div class="ocean" data-motion="transition-fade-0" data-duration="4s" data-delay="0s">
-        <div class="wave"></div>
-        <div class="wave"></div>
-        <div class="wave"></div>
-        <div class="wave"></div>
-        <div class="wave"></div>
-    </div>
-    <!-- Ocean Animation End -->
+    <div class="animation-waves" data-motion="transition-fade-0" data-duration="4s" data-delay="0s">
+    <div class="wave" style="margin-top: 65px;"></div>
+    <div class="wave" style="margin-top: 70px;"></div>
+    <div class="wave" style="margin-top: 80px;"></div>
+</div>
 
 </section>
 <section class="dm-portfolio-showcase grid-background-animation">
