--- a/project-agramix.html
+++ b/project-agramix.html
@@ -176,7 +176,7 @@
                     </button>
                   </div>
                 </div>
-                <video src="C:\xampp-php8.1\htdocs\personal-portfolio\content\render\functions/../../../content/vid/projects/agramix/videos_1/agramix_1.mp4">
+                <video src="content/vid/projects/agramix/videos_1/agramix_1.mp4">
                 </video>
               </div></li></ul><ul class='dm-media-video' data-list-design='items-divisible-by-2'><li class='dm-media-video-item' data-motion='transition-fade-0 transition-slideInRight-0' data-duration='0.3s'><div class="video-container paused" data-volume-level="high"><div class="thumbnail"style="background-image: url('content/img/thumbnails/workpreview-overlay-thumbnail.webp')"><img src="content/img/projects/agramix/logo/logo.png" width="342" height="259" alt="Image: logo" loading="lazy"></div><div class="show-play" style="display:flex;"><svg viewBox='0 0 100 100' width='100' height='100' fill='none'><path fill-rule='evenodd' style='fill: #eaebed;stroke: #b5b5b5;stroke-miterlimit:100;stroke-width: 0;' d='m50 100c-27.7 0-50-22.4-50-50 0-27.7 22.3-50 50-50 27.6 0 50 22.3 50 50 0 27.6-22.4 50-50 50zm31.3-50l-50-25-0.1 50z'/></svg></div><div class="show-pause" style="display:none;"><svg viewBox='0 0 100 100' width='100' height='100' fill='none'><path fill-rule='evenodd' style='fill: #eaebed;stroke: #b5b5b5;stroke-miterlimit:100;stroke-width: 0;' d='m50 100c-27.7 0-50-22.4-50-50 0-27.7 22.3-50 50-50 27.6 0 50 22.3 50 50 0 27.6-22.4 50-50 50zm-18.8-37.4c0.1 1.7 1.4 3 3 3h6.5c1.7 0 3.1-1.3 3.1-3v-25.2c0-1.7-1.4-3-3.1-3h-6.5c-1.6 0-2.9 1.3-2.9 3zm24.9 0c0.1 1.6 1.4 3 3 3h6.5c1.7 0 3.1-1.4 3.1-3v-25.3c0-1.6-1.4-3-3.1-3h-6.5c-1.6 0-2.9 1.4-2.9 3z'/></svg></div><div class="video-controls-container">
                   <div class="timeline-container">
@@ -225,7 +225,7 @@
                     </button>
                   </div>
                 </div>
-                <video src="C:\xampp-php8.1\htdocs\personal-portfolio\content\render\functions/../../../content/vid/projects/agramix/videos_2/agramix_2.mp4">
+                <video src="content/vid/projects/agramix/videos_2/agramix_2.mp4">
                 </video>
               </div></li><li class='dm-media-video-item' data-motion='transition-fade-0 transition-slideInRight-0' data-duration='0.3s'><div class="video-container paused" data-volume-level="high"><div class="thumbnail"style="background-image: url('content/img/thumbnails/workpreview-overlay-thumbnail.webp')"><img src="content/img/projects/agramix/logo/logo.png" width="342" height="259" alt="Image: logo" loading="lazy"></div><div class="show-play" style="display:flex;"><svg viewBox='0 0 100 100' width='100' height='100' fill='none'><path fill-rule='evenodd' style='fill: #eaebed;stroke: #b5b5b5;stroke-miterlimit:100;stroke-width: 0;' d='m50 100c-27.7 0-50-22.4-50-50 0-27.7 22.3-50 50-50 27.6 0 50 22.3 50 50 0 27.6-22.4 50-50 50zm31.3-50l-50-25-0.1 50z'/></svg></div><div class="show-pause" style="display:none;"><svg viewBox='0 0 100 100' width='100' height='100' fill='none'><path fill-rule='evenodd' style='fill: #eaebed;stroke: #b5b5b5;stroke-miterlimit:100;stroke-width: 0;' d='m50 100c-27.7 0-50-22.4-50-50 0-27.7 22.3-50 50-50 27.6 0 50 22.3 50 50 0 27.6-22.4 50-50 50zm-18.8-37.4c0.1 1.7 1.4 3 3 3h6.5c1.7 0 3.1-1.3 3.1-3v-25.2c0-1.7-1.4-3-3.1-3h-6.5c-1.6 0-2.9 1.3-2.9 3zm24.9 0c0.1 1.6 1.4 3 3 3h6.5c1.7 0 3.1-1.4 3.1-3v-25.3c0-1.6-1.4-3-3.1-3h-6.5c-1.6 0-2.9 1.4-2.9 3z'/></svg></div><div class="video-controls-container">
                   <div class="timeline-container">
@@ -274,7 +274,7 @@
                     </button>
                   </div>
                 </div>
-                <video src="C:\xampp-php8.1\htdocs\personal-portfolio\content\render\functions/../../../content/vid/projects/agramix/videos_2/agramix_3.mp4">
+                <video src="content/vid/projects/agramix/videos_2/agramix_3.mp4">
                 </video>
               </div></li></ul></div>        </div>
 
