--- a/project-hartkeepyouthaton.html
+++ b/project-hartkeepyouthaton.html
@@ -176,7 +176,7 @@
                     </button>
                   </div>
                 </div>
-                <video src="C:\xampp-php8.1\htdocs\personal-portfolio\content\render\functions/../../../content/vid/projects/hartkeepyouthaton/vids_1/slider-2.webm">
+                <video src="content/vid/projects/hartkeepyouthaton/vids_1/slider-2.webm">
                 </video>
               </div></li></ul></div>        </div>
 
