--- a/project-piasoftproduct.html
+++ b/project-piasoftproduct.html
@@ -176,7 +176,7 @@
                     </button>
                   </div>
                 </div>
-                <video src="C:\xampp-php8.1\htdocs\personal-portfolio\content\render\functions/../../../content/vid/projects/piasoftproduct/piasoftproduct_1.mp4">
+                <video src="content/vid/projects/piasoftproduct/piasoftproduct_1.mp4">
                 </video>
               </div></li></ul></div>        </div>
 
