--- a/search.html
+++ b/search.html
@@ -261,7 +261,7 @@
                     <div class="search-item-data">
 
                         <a class="title" href="home">
-                            Portfolio                        </a>
+                            Home                        </a>
 
                         <p class="description">
                             My name is Denis Ionut Marginas, I'm 25-year-old, and I've been working as a full-stack web developer and photo-video editor since 2019. Before entering the web development field, I worked as a freelance video editor, specializing in editing videos for video games.                        </p>
